On mobile view, make header not fixed.
* Add `services` cards.

* Add `services` images.

* Add `bootstrap-overriden`.

--- a/src/assets/styles/header.sass
+++ b/src/assets/styles/header.sass
@@ -1,6 +1,11 @@
 header
-  padding-top: 5px
+  padding: 5px
   position: fixed
   width: 100%
   background: white
   z-index: 1
+
+@media screen and (max-width: 768px)
+  header
+    padding: 5px
+    position: relative
